Main navigation with submenus

--- a/src/components/Molecules/MenuLinkList/MenuLinkList.scss
+++ b/src/components/Molecules/MenuLinkList/MenuLinkList.scss
@@ -1,14 +1,20 @@
 .menu-link-list {
+  position: absolute;
+  top: 39px;
+  left: 8px;
+  margin: 0;
   list-style: none;
-  padding: 0.5rem, 0;
+  padding: 0.5rem 0;
   border-color: rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
   color: #212529;
   background-color: #fff;
+  min-width: 175px;
 
   &__item {
     display: flex;
     line-height: 1.5;
+    padding-left: 1rem;
 
     &:hover {
       color: #16181b;
