--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,7 +3,7 @@ html {
   height: 100%;
   font-family: sans-serif;
   font-size: 100%;
-  background-color: darkblue;
+  background-color: #042541;
 }
 
 body {
